--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,71 @@
+@article{DBLP:journals/tcns/VasconcelosM20,
+  author    = {Marcos M. Vasconcelos and
+               Urbashi Mitra},
+  title     = {Observation-Driven Scheduling for Remote Estimation of Two Gaussian
+               Random Variables},
+  journal   = {{IEEE} Trans. Control. Netw. Syst.},
+  volume    = {7},
+  number    = {1},
+  pages     = {232--244},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TCNS.2019.2900864},
+  doi       = {10.1109/TCNS.2019.2900864},
+  timestamp = {Thu, 09 Apr 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/tcns/VasconcelosM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tcns/ChattopadhyayM20,
+  author    = {Arpan Chattopadhyay and
+               Urbashi Mitra},
+  title     = {Security Against False Data-Injection Attack in Cyber-Physical Systems},
+  journal   = {{IEEE} Trans. Control. Netw. Syst.},
+  volume    = {7},
+  number    = {2},
+  pages     = {1015--1027},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TCNS.2019.2927594},
+  doi       = {10.1109/TCNS.2019.2927594},
+  timestamp = {Tue, 30 Jun 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/tcns/ChattopadhyayM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tcom/LiuM20,
+  author    = {Libin Liu and
+               Urbashi Mitra},
+  title     = {On Sampled Reinforcement Learning in Wireless Networks: Exploitation
+               of Policy Structures},
+  journal   = {{IEEE} Trans. Communications},
+  volume    = {68},
+  number    = {5},
+  pages     = {2823--2837},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TCOMM.2020.2974216},
+  doi       = {10.1109/TCOMM.2020.2974216},
+  timestamp = {Mon, 15 Jun 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/tcom/LiuM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icassp/ZhangVCM20,
+  author    = {Xu Zhang and
+               Marcos M. Vasconcelos and
+               Wei Cui and
+               Urbashi Mitra},
+  title     = {An Optimal Symmetric Threshold Strategy for Remote Estimation Over
+               The Collision Channel},
+  booktitle = {2020 {IEEE} International Conference on Acoustics, Speech and Signal
+               Processing, {ICASSP} 2020, Barcelona, Spain, May 4-8, 2020},
+  pages     = {9195--9199},
+  publisher = {{IEEE}},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/ICASSP40776.2020.9053596},
+  doi       = {10.1109/ICASSP40776.2020.9053596},
+  timestamp = {Thu, 23 Jul 2020 16:19:28 +0200},
+  biburl    = {https://dblp.org/rec/conf/icassp/ZhangVCM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @article{DBLP:journals/tcom/MichelusiNMC19,
   author    = {Nicol{\`{o}} Michelusi and
