--- a/recentpubs.bib
+++ b/recentpubs.bib
@@ -1,3 +1,72 @@
+@article{DBLP:journals/tcns/VasconcelosM20,
+  author    = {Marcos M. Vasconcelos and
+               Urbashi Mitra},
+  title     = {Observation-Driven Scheduling for Remote Estimation of Two Gaussian
+               Random Variables},
+  journal   = {{IEEE} Trans. Control. Netw. Syst.},
+  volume    = {7},
+  number    = {1},
+  pages     = {232--244},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TCNS.2019.2900864},
+  doi       = {10.1109/TCNS.2019.2900864},
+  timestamp = {Thu, 09 Apr 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/tcns/VasconcelosM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tcns/ChattopadhyayM20,
+  author    = {Arpan Chattopadhyay and
+               Urbashi Mitra},
+  title     = {Security Against False Data-Injection Attack in Cyber-Physical Systems},
+  journal   = {{IEEE} Trans. Control. Netw. Syst.},
+  volume    = {7},
+  number    = {2},
+  pages     = {1015--1027},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TCNS.2019.2927594},
+  doi       = {10.1109/TCNS.2019.2927594},
+  timestamp = {Tue, 30 Jun 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/tcns/ChattopadhyayM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tcom/LiuM20,
+  author    = {Libin Liu and
+               Urbashi Mitra},
+  title     = {On Sampled Reinforcement Learning in Wireless Networks: Exploitation
+               of Policy Structures},
+  journal   = {{IEEE} Trans. Communications},
+  volume    = {68},
+  number    = {5},
+  pages     = {2823--2837},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/TCOMM.2020.2974216},
+  doi       = {10.1109/TCOMM.2020.2974216},
+  timestamp = {Mon, 15 Jun 2020 01:00:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/tcom/LiuM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icassp/ZhangVCM20,
+  author    = {Xu Zhang and
+               Marcos M. Vasconcelos and
+               Wei Cui and
+               Urbashi Mitra},
+  title     = {An Optimal Symmetric Threshold Strategy for Remote Estimation Over
+               The Collision Channel},
+  booktitle = {2020 {IEEE} International Conference on Acoustics, Speech and Signal
+               Processing, {ICASSP} 2020, Barcelona, Spain, May 4-8, 2020},
+  pages     = {9195--9199},
+  publisher = {{IEEE}},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/ICASSP40776.2020.9053596},
+  doi       = {10.1109/ICASSP40776.2020.9053596},
+  timestamp = {Thu, 23 Jul 2020 16:19:28 +0200},
+  biburl    = {https://dblp.org/rec/conf/icassp/ZhangVCM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/tcom/MichelusiNMC19,
   author    = {Nicol{\`{o}} Michelusi and
                Matthew S. Nokleby and
@@ -13,83 +82,5 @@
   doi       = {10.1109/TCOMM.2018.2886020},
   timestamp = {Fri, 31 May 2019 01:00:00 +0200},
   biburl    = {https://dblp.org/rec/journals/tcom/MichelusiNMC19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-
-
-@article{DBLP:journals/tcom/DissanayakeDNEM19,
-  author    = {Maheshi Buddhinee Dissanayake and
-               Yansha Deng and
-               Arumugam Nallanathan and
-               Maged Elkashlan and
-               Urbashi Mitra},
-  title     = {Interference Mitigation in Large-Scale Multiuser Molecular Communication},
-  journal   = {{IEEE} Trans. Communications},
-  volume    = {67},
-  number    = {6},
-  pages     = {4088--4103},
-  year      = {2019},
-  url       = {https://doi.org/10.1109/TCOMM.2019.2897568},
-  doi       = {10.1109/TCOMM.2019.2897568},
-  timestamp = {Fri, 05 Jul 2019 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/tcom/DissanayakeDNEM19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-
-
-@article{DBLP:journals/tcom/LiuCM19,
-  author    = {Libin Liu and
-               Arpan Chattopadhyay and
-               Urbashi Mitra},
-  title     = {On Solving MDPs With Large State Space: Exploitation of Policy Structures
-               and Spectral Properties},
-  journal   = {{IEEE} Trans. Communications},
-  volume    = {67},
-  number    = {6},
-  pages     = {4151--4165},
-  year      = {2019},
-  url       = {https://doi.org/10.1109/TCOMM.2019.2899620},
-  doi       = {10.1109/TCOMM.2019.2899620},
-  timestamp = {Fri, 05 Jul 2019 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/tcom/LiuCM19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-
-
-@article{DBLP:journals/tsp/ChenM19,
-  author    = {Junting Chen and
-               Urbashi Mitra},
-  title     = {Unimodality-Constrained Matrix Factorization for Non-Parametric Source
-               Localization},
-  journal   = {{IEEE} Trans. Signal Process.},
-  volume    = {67},
-  number    = {9},
-  pages     = {2371--2386},
-  year      = {2019},
-  url       = {https://doi.org/10.1109/TSP.2019.2904026},
-  doi       = {10.1109/TSP.2019.2904026},
-  timestamp = {Tue, 10 Mar 2020 00:00:00 +0100},
-  biburl    = {https://dblp.org/rec/journals/tsp/ChenM19.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-
-
-@inproceedings{DBLP:conf/globecom/ElnakeebM19,
-  author    = {Amr Elnakeeb and
-               Urbashi Mitra},
-  title     = {On Training Sequence Optimization for Leaked {MIMO} {OFDM} Channels},
-  booktitle = {2019 {IEEE} Global Communications Conference, {GLOBECOM} 2019, Waikoloa,
-               HI, USA, December 9-13, 2019},
-  pages     = {1--6},
-  publisher = {{IEEE}},
-  year      = {2019},
-  url       = {https://doi.org/10.1109/GLOBECOM38437.2019.9014125},
-  doi       = {10.1109/GLOBECOM38437.2019.9014125},
-  timestamp = {Wed, 04 Mar 2020 10:00:45 +0100},
-  biburl    = {https://dblp.org/rec/conf/globecom/ElnakeebM19.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
